- Project set to C++17 to support inline variables. - Now the ID for events are assigned as static, so all events have their id set before the main is called. This same approach will be taken for Components and Systems.

--- a/Game Engine 2D/GameEngine2D.vcxproj
+++ b/Game Engine 2D/GameEngine2D.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile>
       <AdditionalIncludeDirectories>C:\SFML-2.4.1_x64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>SFML_STATIC; DEBUG=1; LOG_OUTPUT_CONSOLE=1</PreprocessorDefinitions>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>C:\SFML-2.4.1_x64\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
