--- a/GameEngine/EngineConfig.h.in
+++ b/GameEngine/EngineConfig.h.in
@@ -1,3 +1,3 @@
 // the configured options and settings for Compose Engine
-#define ENGINE_VERSION_MAJOR @ENGINE_VERSION_MAJOR@
-#define ENGINE_VERSION_MINOR @ENGINE_VERSION_MINOR@
+#define ENGINE_VERSION_MAJOR @ComposeEngine_VERSION_MAJOR@
+#define ENGINE_VERSION_MINOR @ComposeEngine_VERSION_MINOR@
