Adds rules to install the game with all the necessary shared libs plus minor misc for building

--- a/GameEngine/CMakeLists.txt
+++ b/GameEngine/CMakeLists.txt
@@ -6,9 +6,18 @@ project (ComposeEngine VERSION 0.1)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-set(CMAKE_CXX_FLAGS "-fpermissive")
+set(CMAKE_CXX_FLAGS -fpermissive)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
+set(CMAKE_INSTALL_PREFIX $ENV{HOME}/MarioClone)
+
+# extend path that the linker is gonna use to search for shared libraries
+set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
 
 # build the dependency project (sfml-tmxloader)
+# Here ninja could be used, but I didn't want to bother
+# checking if ninja is installed on the user's system.
+# At the end of the day the tmx loader is expected to be modified extremely rarely
 execute_process(COMMAND ${CMAKE_COMMAND} ${PROJECT_SOURCE_DIR}/sfml-tmxloader)
 execute_process(COMMAND ${CMAKE_COMMAND} --build ${PROJECT_SOURCE_DIR}/sfml-tmxloader)
 
@@ -16,7 +25,7 @@ execute_process(COMMAND ${CMAKE_COMMAND} --build ${PROJECT_SOURCE_DIR}/sfml-tmxl
 # to the source code
 configure_file (
   ${PROJECT_SOURCE_DIR}/EngineConfig.h.in
-  ${PROJECT_BINARY_DIR}/include/EngineConfig.h
+  ${PROJECT_SOURCE_DIR}/include/EngineConfig.h
 )
 
 configure_file (
@@ -35,7 +44,7 @@ link_directories(${PROJECT_SOURCE_DIR}/lib)
 
 add_subdirectory(${PROJECT_SOURCE_DIR}/src/AI)
 
-set(EXECUTABLE_NAME "MarioClone")
+set(EXECUTABLE_NAME MarioClone)
 
 # Define sources and executable
 file(GLOB_RECURSE SOURCES src/*.cpp)
@@ -59,5 +68,6 @@ target_link_libraries(
   tmx-loader
 )
 
-install (TARGETS ${EXECUTABLE_NAME} DESTINATION GameTest)
-install (FILES ${PROJECT_BINARY_DIR}/EngineConfig.h DESTINATION include)
+install (TARGETS ${EXECUTABLE_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX})
+install (DIRECTORY ${PROJECT_BINARY_DIR}/lib/ DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+install (DIRECTORY ${PROJECT_BINARY_DIR}/resources/ DESTINATION ${CMAKE_INSTALL_PREFIX}/resources)
