--- a/GameEngine/src/AI/CMakeLists.txt
+++ b/GameEngine/src/AI/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_subdirectory(BasicNodes/)
-
 set(LIB_NAME BehaviourTree)
-add_library(${LIB_NAME} OBJECT BehaviourTree.cpp $<TARGET_OBJECTS:TreeNodes>)
+add_library(${LIB_NAME} OBJECT
+    BehaviourTree.cpp
+    BasicNodes/Repeater.cpp
+    BasicNodes/Selector.cpp
+    BasicNodes/Sequence.cpp
+)
