--- a/GameEngine/src/GameExample/CMakeLists.txt
+++ b/GameEngine/src/GameExample/CMakeLists.txt
@@ -1,10 +1,13 @@
-add_subdirectory(AI/)
-add_subdirectory(Behaviours/)
-add_subdirectory(GameObjects/)
-
 set(LIB_NAME GameExample)
+
+# I could not get an object library to hold only object files
+# From the docs of CMake it is not mentioned that object libraries can
+# hold object files.
 add_library(${LIB_NAME} OBJECT
-    $<TARGET_OBJECTS:GameExample_AI>
-    $<TARGET_OBJECTS:GameExample_Behaviours>
-    $<TARGET_OBJECTS:GameExample_GameObjects>
+    AI/AttackWhenInRange.cpp
+    AI/Patrolling.cpp
+    Behaviours/Components/FieldOfView.cpp
+    Behaviours/Systems/FOVspotter.cpp
+    GameObjects/Door.cpp
+    GameObjects/Luigi.cpp
 )
