--- a/GameEngine/CMakeLists.txt
+++ b/GameEngine/CMakeLists.txt
@@ -102,5 +102,5 @@ target_link_libraries(
 )
 
 install (TARGETS ${EXECUTABLE_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX})
-install (DIRECTORY ${PROJECT_BINARY_DIR}/lib/ DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
-install (DIRECTORY ${PROJECT_BINARY_DIR}/resources/ DESTINATION ${CMAKE_INSTALL_PREFIX}/resources)
+install (DIRECTORY ${PROJECT_SOURCE_DIR}/lib/ DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+install (DIRECTORY ${PROJECT_SOURCE_DIR}/resources/ DESTINATION ${CMAKE_INSTALL_PREFIX}/resources)
